--- a/client/src/index.css
+++ b/client/src/index.css
@@ -322,7 +322,7 @@ button:hover {
   line-height: 1em;
   background: linear-gradient(45deg, #71b7e6, #646cff, #b98acc, #ee8176);
   background-size: 300%;
-  /* -webkit-background-clip: text; */
+  -webkit-background-clip: text;
   color: transparent;
   animation: animate 10s ease-in-out infinite;
 }
